complete the two pages

--- a/code/PUBLIC/css/event.css
+++ b/code/PUBLIC/css/event.css
@@ -63,7 +63,7 @@ a {text-decoration:none;}
 	margin:0;
 	color:#232222;
 	font-family:"Microsoft YaHei UI";
-	font-size:18pt;
+	font-size:18px;
 	font-weight:bold;
 }
 /*event_swiper*/
